--- a/benchmark-service/deployment.yaml
+++ b/benchmark-service/deployment.yaml
@@ -50,7 +50,7 @@ spec:
             value: "WetqnMQMoqq2"
 {% else %}
           - name: HAIL_BENCHMARK_BUCKET_NAME
-            value: hail-test-dmk9z
+            value: cpg-hail-test
 {% endif %}
 {% if scope == "dev" %}
           - name: INSTANCE_ID
