--- a/ci/deployment.yaml
+++ b/ci/deployment.yaml
@@ -66,7 +66,7 @@ spec:
 {% if deploy %}
              value: "cpg-hail-ci"
 {% else %}
-             value: "hail-test-dmk9z"
+             value: "cpg-hail-test"
 {% endif %}
           ports:
             - containerPort: 5000
