--- a/grafana/deployment.yaml
+++ b/grafana/deployment.yaml
@@ -28,6 +28,18 @@ spec:
       containers:
        - name: grafana
          image: grafana/grafana:7.3.7
+         env:
+{% if deploy %}
+          - name: GF_SERVER_DOMAIN
+            value: grafana.hail.is
+          - name: GF_SERVER_ROOT_URL
+            value: "%(protocol)s://%(domain)s/"
+{% else %}
+          - name: GF_SERVER_DOMAIN
+            value: internal.hail.is
+          - name: GF_SERVER_ROOT_URL
+            value: "%(protocol)s://%(domain)s/{{ default_ns.name }}/grafana/"
+{% endif %}
          volumeMounts:
           - mountPath: /var/lib/grafana
             name: grafana-storage
