--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -13,3 +13,9 @@ repos:
         language_version: python3
         files: 'ci/.*'
         args: ['--line-length=120', '--skip-string-normalization']
+  - repo: https://github.com/thibaudcolas/curlylint
+    rev: v0.12.0
+    hooks:
+      - id: curlylint
+        types: [file] # By default only runs on .jinja files, this disables that
+        files: \.html$
