--- a/batch/Dockerfile.worker
+++ b/batch/Dockerfile.worker
@@ -1,6 +1,25 @@
 FROM gcr.io/{{ global.project }}/python:3.7-slim-stretch
 
 COPY docker/hail-ubuntu/hail-apt-get-install /bin/hail-apt-get-install
+RUN mkdir -p /usr/share/man/man1 /usr/share/man/man2
+RUN hail-apt-get-install \
+    openjdk-8-jre-headless \
+    liblapack3
+
+COPY docker/hail-ubuntu/pip.conf /root/.config/pip/pip.conf
+COPY docker/hail-ubuntu/hail-pip-install /bin/hail-pip-install
+COPY docker/requirements.txt .
+RUN hail-pip-install -r requirements.txt pyspark==2.4.0
+
+ENV SPARK_HOME /usr/local/lib/python3.7/site-packages/pyspark
+ENV PATH "$PATH:$SPARK_HOME/sbin:$SPARK_HOME/bin"
+ENV PYSPARK_PYTHON python3
+
+COPY batch/download-gcs-connector.py /
+RUN python3 /download-gcs-connector.py
+COPY docker/core-site.xml ${SPARK_HOME}/conf/core-site.xml
+
+COPY docker/hail-ubuntu/hail-apt-get-install /bin/hail-apt-get-install
 RUN echo "APT::Acquire::Retries \"5\";" > /etc/apt/apt.conf.d/80-retries && \
     hail-apt-get-install curl gnupg xfsprogs && \
     export GCSFUSE_REPO=gcsfuse-bionic && \
@@ -11,9 +30,6 @@ RUN echo "APT::Acquire::Retries \"5\";" > /etc/apt/apt.conf.d/80-retries && \
 COPY docker/hail-ubuntu/pip.conf /root/.config/pip/pip.conf
 COPY docker/hail-ubuntu/hail-pip-install /bin/hail-pip-install
 RUN python3 -m pip install --upgrade --no-cache-dir pip
-
-COPY docker/requirements.txt .
-RUN hail-pip-install -r requirements.txt
 
 COPY hail/python/setup-hailtop.py /hailtop/setup.py
 COPY hail/python/hailtop /hailtop/hailtop/
@@ -26,3 +42,5 @@ RUN hail-pip-install --no-deps /gear && rm -rf /gear
 COPY batch/setup.py batch/MANIFEST.in /batch/
 COPY batch/batch /batch/batch/
 RUN hail-pip-install --no-deps /batch && rm -rf /batch
+
+COPY batch/hail.jar /
