[site][website] dynamic website
Website is an aiohttp application which templates docs pages and normal pages. This opens the path
towards unifying the visual appearance of hail.is, the docs, and the services.

I simplified documentation generation at the cost of building the docs twice per commit. A new step,
`make_pip_versioned_docs` builds the pip version of the docs without testing them. `make_docs`
continues to work as it did before. The website uses the docs from `make_pip_versioned_docs`. The
GCS docs location is now completely unused.

Website has four key folders:

- `website/website/pages/`: Jinja2 templated HTML pages. Served at `/`.

- `website/website/docs/`: Hail & Batch docs pages, all HTML pages are templated with Jinja2.
   Served at `/docs`

- `website/website/templates/`: Jinaj2 templates that are used in pages or in docs.

- `website/website/static/`: Non-templated files. Served at `/static`.

The website can be developed locally in or outside of Docker:
```
make -C website run
```
or
```
make -C website rundocker
```

---

I had to rename site to website due to a Python package conflict. I also deleted two unused css
files.

--- a/hail/Makefile
+++ b/hail/Makefile
@@ -297,6 +297,7 @@ batch-docs:
 	      BUILDDIR=$(HAIL_DIR)/build/docs/batch \
 	      html
 	rm -rf build/www/docs/batch
+	mkdir -p build/www/docs
 	cp -R build/docs/batch/html build/www/docs/batch
 	find build/www/docs/batch \
 	     -iname *.html \
