--- a/build.yaml
+++ b/build.yaml
@@ -461,6 +461,13 @@ steps:
    dependsOn:
      - service_base_image
  - kind: buildImage
+   name: hail_run_tests_image
+   dockerFile: hail/Dockerfile.hail-run-tests
+   contextPath: hail
+   publishAs: hail-run-tests
+   dependsOn:
+     - hail_run_image
+ - kind: buildImage
    name: scorecard_image
    dockerFile: scorecard/Dockerfile
    contextPath: .
@@ -599,7 +606,7 @@ steps:
      time tar czf test.tar.gz -C python test
      time tar czf resources.tar.gz -C src/test resources
      time tar czf data.tar.gz -C python/hail/docs data
-     (cd .. && time tar czf hail/site-src.tar.gz site)
+     (cd .. && time tar czf hail/website-src.tar.gz website)
      time tar czf cluster-tests.tar.gz python/cluster-tests
      (cd build/deploy/dist/ && tar -cvf wheel-container.tar hail-*-py3-none-any.whl)
      time TESTNG_SPLITS=5 python3 generate_splits.py
@@ -629,8 +636,8 @@ steps:
        to: /splits.tar.gz
      - from: /io/repo/hail/data.tar.gz
        to: /data.tar.gz
-     - from: /io/repo/hail/site-src.tar.gz
-       to: /site-src.tar.gz
+     - from: /io/repo/hail/website-src.tar.gz
+       to: /website-src.tar.gz
      - from: /io/repo/hail/cluster-tests.tar.gz
        to: /cluster-tests.tar.gz
    dependsOn:
@@ -774,7 +781,7 @@ steps:
  - kind: runImage
    name: test_hail_java_0
    image:
-     valueFrom: hail_run_image.image
+     valueFrom: hail_run_tests_image.image
    resources:
      memory: "7.5G"
      cpu: "2"
@@ -805,12 +812,12 @@ steps:
    dependsOn:
     - default_ns
     - upload_test_resources_to_gcs
-    - hail_run_image
+    - hail_run_tests_image
     - build_hail
  - kind: runImage
    name: test_hail_java_1
    image:
-     valueFrom: hail_run_image.image
+     valueFrom: hail_run_tests_image.image
    resources:
      memory: "7.5G"
      cpu: "2"
@@ -841,12 +848,12 @@ steps:
    dependsOn:
     - default_ns
     - upload_test_resources_to_gcs
-    - hail_run_image
+    - hail_run_tests_image
     - build_hail
  - kind: runImage
    name: test_hail_java_2
    image:
-     valueFrom: hail_run_image.image
+     valueFrom: hail_run_tests_image.image
    resources:
      memory: "7.5G"
      cpu: "2"
@@ -877,12 +884,12 @@ steps:
    dependsOn:
     - default_ns
     - upload_test_resources_to_gcs
-    - hail_run_image
+    - hail_run_tests_image
     - build_hail
  - kind: runImage
    name: test_hail_java_3
    image:
-     valueFrom: hail_run_image.image
+     valueFrom: hail_run_tests_image.image
    resources:
      memory: "7.5G"
      cpu: "2"
@@ -913,12 +920,12 @@ steps:
    dependsOn:
     - default_ns
     - upload_test_resources_to_gcs
-    - hail_run_image
+    - hail_run_tests_image
     - build_hail
  - kind: runImage
    name: test_hail_java_4
    image:
-     valueFrom: hail_run_image.image
+     valueFrom: hail_run_tests_image.image
    resources:
      memory: "7.5G"
      cpu: "2"
@@ -949,7 +956,7 @@ steps:
    dependsOn:
     - default_ns
     - upload_test_resources_to_gcs
-    - hail_run_image
+    - hail_run_tests_image
     - build_hail
  - kind: buildImage
    name: hail_base_image
@@ -1041,7 +1048,7 @@ steps:
  - kind: runImage
    name: test_hail_python_0
    image:
-     valueFrom: hail_run_image.image
+     valueFrom: hail_run_tests_image.image
    resources:
      memory: "7.5G"
      cpu: "2"
@@ -1077,12 +1084,12 @@ steps:
       mountPath: /test-gsa-key
    dependsOn:
      - default_ns
-     - hail_run_image
+     - hail_run_tests_image
      - build_hail
  - kind: runImage
    name: test_hail_python_1
    image:
-     valueFrom: hail_run_image.image
+     valueFrom: hail_run_tests_image.image
    resources:
      memory: "7.5G"
      cpu: "2"
@@ -1118,12 +1125,12 @@ steps:
       mountPath: /test-gsa-key
    dependsOn:
      - default_ns
-     - hail_run_image
+     - hail_run_tests_image
      - build_hail
  - kind: runImage
    name: test_hail_python_2
    image:
-     valueFrom: hail_run_image.image
+     valueFrom: hail_run_tests_image.image
    resources:
      memory: "7.5G"
      cpu: "2"
@@ -1159,12 +1166,12 @@ steps:
       mountPath: /test-gsa-key
    dependsOn:
      - default_ns
-     - hail_run_image
+     - hail_run_tests_image
      - build_hail
  - kind: runImage
    name: test_hail_python_3
    image:
-     valueFrom: hail_run_image.image
+     valueFrom: hail_run_tests_image.image
    resources:
      memory: "7.5G"
      cpu: "2"
@@ -1200,12 +1207,12 @@ steps:
       mountPath: /test-gsa-key
    dependsOn:
      - default_ns
-     - hail_run_image
+     - hail_run_tests_image
      - build_hail
  - kind: runImage
    name: test_hail_python_4
    image:
-     valueFrom: hail_run_image.image
+     valueFrom: hail_run_tests_image.image
    resources:
      memory: "7.5G"
      cpu: "2"
@@ -1241,7 +1248,7 @@ steps:
       mountPath: /test-gsa-key
    dependsOn:
      - default_ns
-     - hail_run_image
+     - hail_run_tests_image
      - build_hail
  - kind: runImage
    name: test_hail_python_copy
@@ -1276,7 +1283,7 @@ steps:
  - kind: runImage
    name: test_hail_python_unchecked_allocator
    image:
-     valueFrom: hail_run_image.image
+     valueFrom: hail_run_tests_image.image
    resources:
      memory: "7.5G"
      cpu: "2"
@@ -1310,12 +1317,12 @@ steps:
       mountPath: /test-gsa-key
    dependsOn:
      - default_ns
-     - hail_run_image
+     - hail_run_tests_image
      - build_hail
  - kind: runImage
    name: test_hail_python_local_backend_0
    image:
-     valueFrom: hail_run_image.image
+     valueFrom: hail_run_tests_image.image
    resources:
      memory: "7.5G"
      cpu: "2"
@@ -1349,12 +1356,12 @@ steps:
        mountPath: /test-gsa-key
    dependsOn:
      - default_ns
-     - hail_run_image
+     - hail_run_tests_image
      - build_hail
  - kind: runImage
    name: test_hail_python_local_backend_1
    image:
-     valueFrom: hail_run_image.image
+     valueFrom: hail_run_tests_image.image
    resources:
      memory: "7.5G"
      cpu: "2"
@@ -1388,12 +1395,12 @@ steps:
        mountPath: /test-gsa-key
    dependsOn:
      - default_ns
-     - hail_run_image
+     - hail_run_tests_image
      - build_hail
  - kind: runImage
    name: test_hail_python_local_backend_2
    image:
-     valueFrom: hail_run_image.image
+     valueFrom: hail_run_tests_image.image
    resources:
      memory: "7.5G"
      cpu: "2"
@@ -1428,12 +1435,12 @@ steps:
        mountPath: /test-gsa-key
    dependsOn:
      - default_ns
-     - hail_run_image
+     - hail_run_tests_image
      - build_hail
  - kind: runImage
    name: test_hail_python_local_backend_3
    image:
-     valueFrom: hail_run_image.image
+     valueFrom: hail_run_tests_image.image
    resources:
      memory: "7.5G"
      cpu: "2"
@@ -1467,12 +1474,12 @@ steps:
        mountPath: /test-gsa-key
    dependsOn:
      - default_ns
-     - hail_run_image
+     - hail_run_tests_image
      - build_hail
  - kind: runImage
    name: test_hail_python_local_backend_4
    image:
-     valueFrom: hail_run_image.image
+     valueFrom: hail_run_tests_image.image
    resources:
      memory: "7.5G"
      cpu: "2"
@@ -1506,7 +1513,7 @@ steps:
        mountPath: /test-gsa-key
    dependsOn:
      - default_ns
-     - hail_run_image
+     - hail_run_tests_image
      - build_hail
  - kind: runImage
    name: test_python_docs
@@ -1535,8 +1542,8 @@ steps:
      cd {{ token }}
      unzip -q -d python /io/hail.zip
 
-     tar xzf /io/site-src.tar.gz
-     export HAIL_SITE_DIR=$(pwd)/site/
+     tar xzf /io/website-src.tar.gz
+     export HAIL_WEBSITE_DIR=$(pwd)/website/website/
 
      sed -E "s/\(hail\#([0-9]+)\)/(\[#\1](https:\/\/github.com\/hail-is\/hail\/pull\/\1))/g" \
        < python/hail/docs/change_log.md \
@@ -1559,14 +1566,44 @@ steps:
    inputs:
     - from: /hail.zip
       to: /io/hail.zip
-    - from: /site-src.tar.gz
-      to: /io/site-src.tar.gz
+    - from: /website-src.tar.gz
+      to: /io/website-src.tar.gz
    outputs:
     - from: /io/www.tar.gz
       to: /www.tar.gz
    dependsOn:
     - hail_base_image
     - build_hail
+ - kind: runImage
+   name: make_pip_versioned_docs
+   image:
+     valueFrom: hail_run_image.image
+   script: |
+     set -ex
+
+     mkdir repo
+     cd repo
+     {{ code.checkout_script }}
+
+     make -C hail python/hail/hail_pip_version
+
+     # dev deploy elides the hail-is remote, add it and retrieve the tags
+     git remote add hail-is https://github.com/hail-is/hail.git
+     git fetch hail-is
+     # if the tag doesn't exist, this commit is the release
+     git checkout $(cat hail/python/hail/hail_pip_version) || true
+
+     PYTHONPATH=$PYTHONPATH:$(pwd)/hail/python make -C hail hail-docs-no-test batch-docs
+
+     tar czf /io/docs.tar.gz -C hail/build/www .
+   resources:
+     memory: "7.5G"
+     cpu: "2"
+   outputs:
+    - from: /io/docs.tar.gz
+      to: /docs.tar.gz
+   dependsOn:
+    - hail_run_image
  - kind: deploy
    name: deploy_router
    namespace:
@@ -3297,15 +3334,6 @@ steps:
      GS_HAIL_ZIP=gs://hail-common/builds/${BRANCH}/python/hail-${BRANCH}-${SHA}.zip
      gsutil cp /io/hail.zip ${GS_HAIL_ZIP}
      gsutil acl set public-read ${GS_HAIL_ZIP}
-     DOCS=gs://hail-common/builds/${BRANCH}/docs/hail-${BRANCH}-docs-${SHA}.tar.gz
-     gsutil cp /io/www.tar.gz ${DOCS}
-     gsutil acl set public-read ${DOCS}
-     gsutil retention temp set ${DOCS}
-     echo "{{ code.sha }}" > latest-hash-spark-${SPARK_VERSION}.txt
-     # CLOUDTOOLS_VERSION=4
-     # HASH_TARGET=gs://hail-common/builds/${BRANCH}/latest-hash/cloudtools-${CLOUDTOOLS_VERSION}-spark-${SPARK_VERSION}.txt
-     # gsutil cp ./latest-hash-spark-${SPARK_VERSION}.txt ${HASH_TARGET}
-     # gsutil acl set public-read ${HASH_TARGET}
    image:
      valueFrom: base_image.image
    secrets:
@@ -3318,14 +3346,11 @@ steps:
       to: /io/hail.jar
     - from: /hail.zip
       to: /io/hail.zip
-    - from: /www.tar.gz
-      to: /io/www.tar.gz
    scopes:
     - deploy
    dependsOn:
     - default_ns
     - base_image
-    - make_docs
     - build_hail
  - kind: buildImage
    name: blog_nginx_image
@@ -3457,87 +3482,38 @@ steps:
     - copy_files
     - ci_utils_image
     - build_hail
- - kind: runImage
-   name: build_site_www
-   image:
-     valueFrom: hail_build_image.image
-   script: |
-     set -ex
-     cd /io
-     rm -rf repo
-     mkdir repo
-     cd repo
-     {{ code.checkout_script }}
-
-     make -C site render
-
-     make -C hail python/hail/hail_version
-     HAIL_CACHE_VERSION=$(cat hail/python/hail/hail_version)
-     find site/www -iname *.html -type f -exec sed -i -e "s/\.css/\.css\?v\=$HAIL_CACHE_VERSION/" {} +;
-
-     rsync --archive \
-           --verbose \
-           site/www/* \
-           /io/www
-
-     # Grab the latest release of the docs
-     LATEST_02_SHA=$(gsutil cat gs://hail-common/builds/0.2/latest-hash/cloudtools-5-spark-2.4.0.txt 2>/dev/null)
-     if [[ -z "$LATEST_02_SHA" ]]; then
-       echo "Failed to retrieve latest sha for hail docs"
-       exit 1
-     fi
-     gsutil cat gs://hail-common/builds/0.2/docs/hail-0.2-docs-${LATEST_02_SHA}.tar.gz |
-         tar zxvf - -C /io/www --strip-components=1
-
-     mkdir /io/www/docs/0.1
-     LATEST_01_SHA=$(gsutil cat gs://hail-common/builds/0.1/latest-hash-spark-2.0.2.txt 2>/dev/null)
-     if [[ -z "$LATEST_01_SHA" ]]; then
-       echo "Failed to retrieve latest sha for hail 0.1 docs"
-       exit 1
-     fi
-     gsutil cat gs://hail-common/builds/0.1/docs/hail-0.1-docs-${LATEST_01_SHA}.tar.gz |
-         tar xvf - -C /io/www/docs/0.1 --strip-components=2
-
-     cd /io/www && tar -cvzf /io/site-www.tar.gz *
-   outputs:
-    - from: /io/site-www.tar.gz
-      to: /site-www.tar.gz
-   dependsOn:
-     - hail_build_image
-     - deploy
  - kind: buildImage
-   name: site_image
-   dockerFile: site/Dockerfile
-   contextPath: site
-   publishAs: site
+   name: website_image
+   dockerFile: website/Dockerfile
+   contextPath: website
+   publishAs: website
    inputs:
-     - from: /site-www.tar.gz
-       to: /site-www.tar.gz
+     - from: /docs.tar.gz
+       to: /docs.tar.gz
    dependsOn:
-     - base_image
-     - build_site_www
-     - hail_ubuntu_image
+     - service_base_image
+     - make_pip_versioned_docs
  - kind: deploy
-   name: deploy_site
+   name: deploy_website
    namespace:
      valueFrom: default_ns.name
-   config: site/deployment.yaml
+   config: website/deployment.yaml
    wait:
     - kind: Service
-      name: site
+      name: website
       for: alive
    dependsOn:
     - default_ns
-    - site_image
+    - website_image
     - deploy_router
     - create_certs
  - kind: runImage
-   name: test_site
+   name: test_website
    image:
      valueFrom: service_base_image.image
    script: |
      set -ex
-     hailctl curl {{ default_ns.name }} site / \
+     hailctl curl {{ default_ns.name }} website / \
              -vvv \
              -fsSL \
              --retry 3 \
@@ -3555,7 +3531,7 @@ steps:
     - default_ns
     - create_accounts
     - service_base_image
-    - deploy_site
+    - deploy_website
  - kind: buildImage
    name: hail_public_image
    dockerFile: docker/hail/Dockerfile
@@ -3639,7 +3615,7 @@ steps:
  - kind: runImage
    name: test_hail_services_java
    image:
-     valueFrom: hail_run_image.image
+     valueFrom: hail_run_tests_image.image
    resources:
      memory: "7.5G"
      cpu: "2"
@@ -3677,7 +3653,7 @@ steps:
    dependsOn:
     - default_ns
     - create_certs
-    - hail_run_image
+    - hail_run_tests_image
     - build_hail
     - deploy_batch
     - deploy_shuffler
