--- a/router/deployment.yaml
+++ b/router/deployment.yaml
@@ -1,17 +1,17 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: site
+  name: website
   labels:
-    app: site
+    app: website
 spec:
   ports:
   - name: https
     port: 443
     protocol: TCP
-    targetPort: 443
+    targetPort: 5000
   selector:
-    app: site
+    app: website
 ---
 apiVersion: v1
 kind: Service
