--- a/tls/config.yaml
+++ b/tls/config.yaml
@@ -27,9 +27,9 @@ principals:
 - name: router
   domain: router
   kind: nginx
-- name: site
-  domain: site
-  kind: nginx
+- name: website
+  domain: website
+  kind: json
 - name: scorecard
   domain: scorecard
   kind: json
