--- a/internal-gateway/Makefile
+++ b/internal-gateway/Makefile
@@ -2,8 +2,8 @@ include ../config.mk
 
 .PHONY: build push deploy
 
-INTERNAL_GATEWAY_LATEST = gcr.io/$(PROJECT)/internal-gateway:latest
-INTERNAL_GATEWAY_IMAGE = gcr.io/$(PROJECT)/internal-gateway:$(shell docker images -q --no-trunc internal-gateway | sed -e 's,[^:]*:,,')
+INTERNAL_GATEWAY_LATEST = $(DOCKER_PREFIX)/internal-gateway:latest
+INTERNAL_GATEWAY_IMAGE = $(DOCKER_PREFIX)/internal-gateway:$(shell docker images -q --no-trunc internal-gateway | sed -e 's,[^:]*:,,')
 
 build:
 	$(MAKE) -C ../docker hail-ubuntu
