--- a/query/Makefile
+++ b/query/Makefile
@@ -3,8 +3,8 @@ include ../config.mk
 EXTRA_PYTHONPATH := ../hail/python:../gear
 PYTHON := PYTHONPATH=$${PYTHONPATH:+$${PYTHONPATH}:}$(EXTRA_PYTHONPATH) python3
 
-QUERY_LATEST = gcr.io/$(PROJECT)/query:latest
-QUERY_IMAGE = gcr.io/$(PROJECT)/query:$(shell docker images -q --no-trunc query | sed -e 's,[^:]*:,,')
+QUERY_LATEST = $(DOCKER_PREFIX)/query:latest
+QUERY_IMAGE = $(DOCKER_PREFIX)/query:$(shell docker images -q --no-trunc query | sed -e 's,[^:]*:,,')
 
 .PHONY: check
 check:
