--- a/batch/Dockerfile.worker
+++ b/batch/Dockerfile.worker
@@ -1,4 +1,4 @@
-FROM gcr.io/{{ global.project }}/python:3.7-slim-stretch
+FROM {{ global.docker_prefix }}/python:3.7-slim-stretch
 
 COPY docker/hail-ubuntu/retry /bin/retry
 COPY docker/hail-ubuntu/hail-apt-get-install /bin/hail-apt-get-install
