--- a/gateway/Makefile
+++ b/gateway/Makefile
@@ -2,8 +2,8 @@ include ../config.mk
 
 .PHONY: build push deploy
 
-GATEWAY_LATEST = gcr.io/$(PROJECT)/gateway:latest
-GATEWAY_IMAGE = gcr.io/$(PROJECT)/gateway:$(shell docker images -q --no-trunc gateway | sed -e 's,[^:]*:,,')
+GATEWAY_LATEST = $(DOCKER_PREFIX)/gateway:latest
+GATEWAY_IMAGE = $(DOCKER_PREFIX)/gateway:$(shell docker images -q --no-trunc gateway | sed -e 's,[^:]*:,,')
 
 build:
 	$(MAKE) -C ../docker hail-ubuntu
