--- a/ukbb-rg/Dockerfile.browser
+++ b/ukbb-rg/Dockerfile.browser
@@ -1,4 +1,4 @@
-FROM gcr.io/{{ global.project }}/ubuntu:20.04
+FROM {{ docker_prefix }}/ubuntu:20.04
 
 ENV DEBIAN_FRONTEND=noninteractive
 RUN apt-get update && \
