--- a/ukbb-rg/Dockerfile.static
+++ b/ukbb-rg/Dockerfile.static
@@ -1,4 +1,4 @@
-FROM gcr.io/{{ global.project }}/ubuntu:18.04
+FROM {{ docker_prefix }}/ubuntu:18.04
 
 RUN apt-get update -y && \
     apt-get install -y nginx && \
