--- a/ukbb-rg/Makefile
+++ b/ukbb-rg/Makefile
@@ -1,22 +1,22 @@
 include ../config.mk
 
-UKBB_RG_STATIC_LATEST = gcr.io/$(PROJECT)/ukbb-rg-static:latest
-UKBB_RG_STATIC_IMAGE = gcr.io/$(PROJECT)/ukbb-rg-static:$(shell docker images -q --no-trunc ukbb-rg-static | sed -e 's,[^:]*:,,')
+UKBB_RG_STATIC_LATEST = $(DOCKER_PREFIX)/ukbb-rg-static:latest
+UKBB_RG_STATIC_IMAGE = $(DOCKER_PREFIX)/ukbb-rg-static:$(shell docker images -q --no-trunc ukbb-rg-static | sed -e 's,[^:]*:,,')
 
-UKBB_RG_BROWSER_LATEST = gcr.io/$(PROJECT)/ukbb-rg-browser:latest
-UKBB_RG_BROWSER_IMAGE = gcr.io/$(PROJECT)/ukbb-rg-browser:$(shell docker images -q --no-trunc ukbb-rg-browser | sed -e 's,[^:]*:,,')
+UKBB_RG_BROWSER_LATEST = $(DOCKER_PREFIX)/ukbb-rg-browser:latest
+UKBB_RG_BROWSER_IMAGE = $(DOCKER_PREFIX)/ukbb-rg-browser:$(shell docker images -q --no-trunc ukbb-rg-browser | sed -e 's,[^:]*:,,')
 
 .PHONY: build
 build:
 	ls app/app.R app/www/rainbowvis.js # read the README
-	docker pull gcr.io/$(PROJECT)/ubuntu:18.04
+	docker pull $(DOCKER_PREFIX)/ubuntu:18.04
 	-docker pull $(UKBB_RG_STATIC_LATEST)
-	python3 ../ci/jinja2_render.py '{"global":{"project":"$(PROJECT)"}}' Dockerfile.static Dockerfile.static.out
-	docker build -t ukbb-rg-static -f Dockerfile.static.out --cache-from ukbb-rg-static,$(UKBB_RG_STATIC_LATEST),gcr.io/$(PROJECT)/ubuntu:18.04 .
-	docker pull gcr.io/$(PROJECT)/ubuntu:19.04
+	python3 ../ci/jinja2_render.py '{"docker_prefix":"$(DOCKER_PREFIX)"}' Dockerfile.static Dockerfile.static.out
+	docker build -t ukbb-rg-static -f Dockerfile.static.out --cache-from ukbb-rg-static,$(UKBB_RG_STATIC_LATEST),$(DOCKER_PREFIX)/ubuntu:18.04 .
+	docker pull $(DOCKER_PREFIX)/ubuntu:19.04
 	-docker pull $(UKBB_RG_BROWSER_LATEST)
-	python3 ../ci/jinja2_render.py '{"global":{"project":"$(PROJECT)"}}' Dockerfile.browser Dockerfile.browser.out
-	docker build -t ukbb-rg-browser -f Dockerfile.browser.out --cache-from ukbb-rg-browser,$(UKBB_RG_BROWSER_LATEST),gcr.io/$(PROJECT)/ubuntu:19.04 .
+	python3 ../ci/jinja2_render.py '{"docker_prefix":"$(DOCKER_PREFIX)"}' Dockerfile.browser Dockerfile.browser.out
+	docker build -t ukbb-rg-browser -f Dockerfile.browser.out --cache-from ukbb-rg-browser,$(UKBB_RG_BROWSER_LATEST),$(DOCKER_PREFIX)/ubuntu:19.04 .
 
 .PHONY: push
 push: build
@@ -31,7 +31,8 @@ push: build
 
 .PHONY: deploy
 deploy: push
-	kubectl apply -f deployment.yaml
+	python3 ../ci/jinja2_render.py '{"docker_prefix":"$(DOCKER_PREFIX)"}' deployment.yaml deployment.yaml.out
+	kubectl apply -f deployment.yaml.out
 
 update-ukbb-rg-browser-files:
 	mkdir -p data
