--- a/image-fetcher/Dockerfile
+++ b/image-fetcher/Dockerfile
@@ -1,4 +1,4 @@
-FROM gcr.io/{{ global.project }}/alpine:3.8
+FROM {{ global.docker_prefix }}/alpine:3.8
 MAINTAINER hail-team@broadinstitute.org
 
 RUN apk --no-cache add \
@@ -12,6 +12,6 @@ RUN curl -sSL https://sdk.cloud.google.com | bash
 ENV PATH $PATH:/root/google-cloud-sdk/bin
 
 ADD fetch-image.sh ./
-ENV PROJECT {{ global.project }}
+ENV DOCKER_PREFIX {{ global.docker_prefix }}
 
 CMD /bin/sh fetch-image.sh
