--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,7 @@ hs_err_pid*.log
 GPATH
 GRTAGS
 GTAGS
+hail/prebuilt/lib/darwin/libboot.dylib
+hail/prebuilt/lib/darwin/libhail.dylib
+query/hail.jar
+infra/.terraform.lock.hcl
