--- a/batch/deployment.yaml
+++ b/batch/deployment.yaml
@@ -56,6 +56,8 @@ spec:
            value: "{{ default_ns.name }}"
          - name: PROJECT
            value: "{{ global.project }}"
+         - name: HAIL_DOCKER_PREFIX
+           value: "{{ global.docker_prefix }}"
          - name: HAIL_GCP_REGION
            valueFrom:
              secretKeyRef:
@@ -192,6 +194,8 @@ spec:
            value: "{{ default_ns.name }}"
          - name: PROJECT
            value: "{{ global.project }}"
+         - name: HAIL_DOCKER_PREFIX
+           value: "{{ global.docker_prefix }}"
          - name: HAIL_GCP_REGION
            valueFrom:
              secretKeyRef:
