--- a/docker/hail-ubuntu/Dockerfile
+++ b/docker/hail-ubuntu/Dockerfile
@@ -1,4 +1,4 @@
-FROM gcr.io/{{ global.project }}/ubuntu:focal-20201106
+FROM {{ global.docker_prefix }}/ubuntu:focal-20201106
 ENV LANG C.UTF-8
 COPY retry /bin/retry
 COPY hail-apt-get-install /bin/hail-apt-get-install
